--- a/style.css
+++ b/style.css
@@ -656,13 +656,13 @@ footer a:active {
 
 @media (max-width:95em) {
     .container {
-      max-width: 130rem;
-      padding: 0 3.5rem;
-      margin: 0 auto;
+        max-width: 130rem;
+        padding: 2rem 2.5rem;
     }
-    .section {
-        margin-bottom: 3rem;
-    }      
+
+    .navbar-lists {
+        gap: 3.2rem;
+    }
 
     .info-div .info {
         width: 100%;
@@ -692,7 +692,7 @@ footer a:active {
 
     .container {
         max-width: 110rem;
-        margin: 0 auto;
+        padding: 2rem 2rem;
     }
 
     .grid {
@@ -885,10 +885,6 @@ footer a:active {
 /* 800 */
 
 @media (max-width:50em) {
-    .container {
-        max-width: 86rem;
-    }
-
     .courses-data .info-div {
         width: 50rem;
         height: 100%;
@@ -903,13 +899,11 @@ footer a:active {
     .card-div {
         grid-template-columns: 1fr;
     }
-
     .card {
         width: 25rem;
         height: 15rem;
     }
-
-    .card:hover {
+    .card:hover{
         height: 23rem;
     }
 }
@@ -929,9 +923,6 @@ footer a:active {
 
 /* 560px */
 @media(max-width:35em) {
-    .container {
-        max-width: 40rem;
-    }
 
     .main-section .head p {
         font-size: 1.3rem;
@@ -1006,17 +997,14 @@ footer a:active {
     .container {
         max-width: 30rem;
     }
-
     .card-div {
         grid-template-columns: 1fr;
     }
-
     .card {
         width: 20rem;
         height: 15rem;
     }
-
-    .card:hover {
+    .card:hover{
         height: 23rem;
     }
 }
