--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h2 {
   background-color: #348ca8;
   color: var(--white);
   border: none;
-  padding: 1.2rem 3.0rem;
+  padding: 1.5rem;
   border-radius: 1rem;
   font-size: 1rem;
   font-weight: 600;
